--- a/Extensions/JamesDibble.Extensions.System/JamesDibble.Extensions.System.csproj
+++ b/Extensions/JamesDibble.Extensions.System/JamesDibble.Extensions.System.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DateTimeRange.cs" />
     <Compile Include="DateTimeExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensions.cs" />
