--- a/Extensions/JamesDibble.Extensions.System/JamesDibble.Extensions.System.csproj
+++ b/Extensions/JamesDibble.Extensions.System/JamesDibble.Extensions.System.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="DateTimeRange.cs" />
     <Compile Include="DateTimeExtensions.cs" />
+    <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="ObjectExtensions.cs" />
